crates/credential/tests/probes/engine_dispatch_non_refreshable.stderr
error[E0277]: the trait bound `ApiKeyCredential: Refreshable` is not satisfied
  --> tests/probes/engine_dispatch_non_refreshable.rs:25:49
   |
25 |     let _ = RefreshDispatcher::for_credential::<ApiKeyCredential>();
   |                                                 ^^^^^^^^^^^^^^^^ the trait `Refreshable` is not implemented for `ApiKeyCredential`
   |
help: the trait `Refreshable` is implemented for `OAuth2Credential`
  --> src/credentials/oauth2.rs
   |
   | impl Refreshable for OAuth2Credential {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `RefreshDispatcher::for_credential`
  --> tests/probes/engine_dispatch_non_refreshable.rs:18:26
   |
18 |     fn for_credential<C: Refreshable>() -> Self {
   |                          ^^^^^^^^^^^ required by this bound in `RefreshDispatcher::for_credential`
